feat: get product
