# docs/swagger.json
@@ -76,6 +76,34 @@
             }
         },
         "/api/v1/product/{id}": {
+            "get": {
+                "description": "GetProduct",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "GetProduct",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "string",
+                        "description": "Product Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_DaniaLD_upera-go-test_pkg_model.Product"
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "UpdateProduct",
                 "produces": [
